docs/0.19/_sources/api/gammapy.astro.population.Lorimer2006.rst.txt
Lorimer2006
===========

.. currentmodule:: gammapy.astro.population

.. autoclass:: Lorimer2006
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~Lorimer2006.B
      ~Lorimer2006.C
      ~Lorimer2006.amplitude
      ~Lorimer2006.bounding_box
      ~Lorimer2006.bounds
      ~Lorimer2006.col_fit_deriv
      ~Lorimer2006.cov_matrix
      ~Lorimer2006.eqcons
      ~Lorimer2006.evolved
      ~Lorimer2006.fit_deriv
      ~Lorimer2006.fittable
      ~Lorimer2006.fixed
      ~Lorimer2006.has_user_bounding_box
      ~Lorimer2006.has_user_inverse
      ~Lorimer2006.ineqcons
      ~Lorimer2006.input_units
      ~Lorimer2006.input_units_allow_dimensionless
      ~Lorimer2006.input_units_equivalencies
      ~Lorimer2006.input_units_strict
      ~Lorimer2006.inputs
      ~Lorimer2006.inverse
      ~Lorimer2006.linear
      ~Lorimer2006.meta
      ~Lorimer2006.model_constraints
      ~Lorimer2006.model_set_axis
      ~Lorimer2006.n_inputs
      ~Lorimer2006.n_outputs
      ~Lorimer2006.n_submodels
      ~Lorimer2006.name
      ~Lorimer2006.outputs
      ~Lorimer2006.param_names
      ~Lorimer2006.param_sets
      ~Lorimer2006.parameter_constraints
      ~Lorimer2006.parameters
      ~Lorimer2006.return_units
      ~Lorimer2006.separable
      ~Lorimer2006.standard_broadcasting
      ~Lorimer2006.stds
      ~Lorimer2006.sync_constraints
      ~Lorimer2006.tied
      ~Lorimer2006.uses_quantity

   .. rubric:: Methods Summary

   .. autosummary::

      ~Lorimer2006.__call__
      ~Lorimer2006.coerce_units
      ~Lorimer2006.copy
      ~Lorimer2006.deepcopy
      ~Lorimer2006.evaluate
      ~Lorimer2006.has_inverse
      ~Lorimer2006.prepare_inputs
      ~Lorimer2006.prepare_outputs
      ~Lorimer2006.rename
      ~Lorimer2006.render
      ~Lorimer2006.strip_units_from_tree
      ~Lorimer2006.sum_of_implicit_terms
      ~Lorimer2006.with_units_from_data
      ~Lorimer2006.without_units_for_data

   .. rubric:: Attributes Documentation

   .. autoattribute:: B
   .. autoattribute:: C
   .. autoattribute:: amplitude
   .. autoattribute:: bounding_box
   .. autoattribute:: bounds
   .. autoattribute:: col_fit_deriv
   .. autoattribute:: cov_matrix
   .. autoattribute:: eqcons
   .. autoattribute:: evolved
   .. autoattribute:: fit_deriv
   .. autoattribute:: fittable
   .. autoattribute:: fixed
   .. autoattribute:: has_user_bounding_box
   .. autoattribute:: has_user_inverse
   .. autoattribute:: ineqcons
   .. autoattribute:: input_units
   .. autoattribute:: input_units_allow_dimensionless
   .. autoattribute:: input_units_equivalencies
   .. autoattribute:: input_units_strict
   .. autoattribute:: inputs
   .. autoattribute:: inverse
   .. autoattribute:: linear
   .. autoattribute:: meta
   .. autoattribute:: model_constraints
   .. autoattribute:: model_set_axis
   .. autoattribute:: n_inputs
   .. autoattribute:: n_outputs
   .. autoattribute:: n_submodels
   .. autoattribute:: name
   .. autoattribute:: outputs
   .. autoattribute:: param_names
   .. autoattribute:: param_sets
   .. autoattribute:: parameter_constraints
   .. autoattribute:: parameters
   .. autoattribute:: return_units
   .. autoattribute:: separable
   .. autoattribute:: standard_broadcasting
   .. autoattribute:: stds
   .. autoattribute:: sync_constraints
   .. autoattribute:: tied
   .. autoattribute:: uses_quantity

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: coerce_units
   .. automethod:: copy
   .. automethod:: deepcopy
   .. automethod:: evaluate
   .. automethod:: has_inverse
   .. automethod:: prepare_inputs
   .. automethod:: prepare_outputs
   .. automethod:: rename
   .. automethod:: render
   .. automethod:: strip_units_from_tree
   .. automethod:: sum_of_implicit_terms
   .. automethod:: with_units_from_data
   .. automethod:: without_units_for_data
